--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +12,6 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/paintings.css">
 </head>
-
 <body>
     <header id="header">
         <div class="container center-flex">
@@ -28,7 +26,6 @@
             </ul>
         </div>
     </header>
-
     <main>
         <section class="contents">
             <div class="container">
@@ -95,7 +92,7 @@
                             <img src="../images/alex/guernica.jpg" alt="Painting 'Guernica'. Pablo Picasso">
                             <figcaption>
                                 Guernica <br>
-                                <a href="./artists.html#">Pablo Picasso</a>
+                                <a href="./artists.html#pablo">Pablo Picasso</a>
                             </figcaption>
                         </figure>
                     </div>
@@ -103,8 +100,7 @@
                 <li id="last-supper">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/last-supper.jpg"
-                                alt="Painting 'The Last Supper'. Leonardo da Vinci">
+                            <img src="../images/alex/last-supper.jpg" alt="Painting 'The Last Supper'. Leonardo da Vinci">
                             <figcaption>
                                 The Last Supper <br>
                                 <a href="./artists.html#davinci">Leonardo da Vinci</a>
@@ -137,8 +133,7 @@
                 <li id="pearl-earring">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/pearl-earring.jpg"
-                                alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
+                            <img src="../images/alex/pearl-earring.jpg"  alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
                             <figcaption>
                                 The Girl With A Pearl Earring <br>
                                 <a href="./artists.html#vermeer">Johannes Vermeer</a>
@@ -149,8 +144,7 @@
                 <li id="persistence-of-memory">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/persistence-of-memory.jpg"
-                                alt="Painting 'The Persistence Of Memory'. Salvador Dali">
+                            <img src="../images/alex/persistence-of-memory.jpg" alt="Painting 'The Persistence Of Memory'. Salvador Dali">
                             <figcaption>
                                 The Persistence Of Memory <br>
                                 <a href="./artists.html#dali">Salvador Dali</a>
@@ -172,8 +166,7 @@
                 <li id="starry-night">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/starry-night.jpg"
-                                alt="Painting 'The Starry Night'. Vincent van Gogh">
+                            <img src="../images/alex/starry-night.jpg" alt="Painting 'The Starry Night'. Vincent van Gogh">
                             <figcaption>
                                 The Starry Night <br>
                                 <a href="./artists.html#gogh">Vincent van Gogh</a>
@@ -184,8 +177,7 @@
                 <li id="whistlers-mother">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/whistlers-mother.jpg"
-                                alt="Painting 'Whistler's Mother'. James McNeill Whistler">
+                            <img src="../images/alex/whistlers-mother.jpg" alt="Painting 'Whistler's Mother'. James McNeill Whistler">
                             <figcaption>
                                 Whistler's Mother <br>
                                 <a href="./artists.html#whistler">James McNeill Whistler</a>
@@ -203,8 +195,7 @@
         <svg viewBox="0 0 32 32">
             <g>
                 <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
-                <path
-                    d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
+                <path d="M10.41,19.87,16,14.29l5.59,5.58a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L16.64,12.1a.91.91,0,0,0-1.28,0L9,18.46a1,1,0,0,0,0,1.41H9A1,1,0,0,0,10.41,19.87Z" />
             </g>
         </svg>
     </a>
