Light House Optimiz

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Look at the artists whose paintings are presented at the Fan Gogh Exhibition.">
     <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"
-        rel="stylesheet" />
-
-    <title>Artists</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet" />
+    <title>Artists - Fan Gogh Exhibition</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/artists.css">
 </head>
@@ -88,7 +85,7 @@
                 notebooks, in which he made drawings and notes on a variety of subjects, including anatomy, astronomy,
                 botany, cartography, painting, and paleontology.
             </P>
-            <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="gogh">
@@ -98,7 +95,7 @@
                 of the most famous and influential figures in Western art history.
                 In a decade, he created about 2,100 artworks, including around 860 oil paintings.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="munch">
@@ -110,7 +107,7 @@
                 the enormous, infinite scream of nature'. The painting's agonized face is widely identified with the
                 angst of the modern person.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Edvard_Munch" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Edvard_Munch" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="vermeer">
@@ -121,7 +118,7 @@
                 During his lifetime, he was a moderately successful provincial genre painter, recognized in Delft and
                 The Hague.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Johannes_Vermeer" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Johannes_Vermeer" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="botticelli">
@@ -132,7 +129,7 @@
                 His best-known works are The Birth of Venus and Primavera, both in the Uffizi in Florence, which holds
                 many of Botticelli's works.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Sandro_Botticelli" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Sandro_Botticelli" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="rembrandt">
@@ -146,7 +143,7 @@
                 of his paintings left the Dutch Republic while he lived, but his prints were circulated throughout
                 Europe, and his wider reputation was initially based on them alone.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Rembrandt" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Rembrandt" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="dali">
@@ -157,7 +154,7 @@
                 His best-known work, The Persistence of Memory, was completed in August 1931, and is one of the most
                 famous Surrealist paintings.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Salvador_Dal%C3%AD" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/Salvador_Dal%C3%AD" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="whistler">
@@ -168,7 +165,7 @@
                 His most famous painting, Arrangement in Grey and Black No. 1 (1871), commonly known as Whistler's
                 Mother, is a revered and often parodied portrait of motherhood.
             </p>
-            <a href="https://en.wikipedia.org/wiki/James_Abbott_McNeill_Whistler" target="_blank">Read more</a>
+            <a href="https://en.wikipedia.org/wiki/James_Abbott_McNeill_Whistler" target="_blank">Read more (Wikipedia)</a>
         </article>
         <br>
         <article class="div-info" id="pablo">
@@ -178,15 +175,15 @@
                 One of the most influential artists of the 20th century, he is known for co-founding the Cubist movement, the invention of constructed sculpture, the co-invention of collage, and for the wide variety of styles that he helped develop and explore. 
                 Among his most famous works are the proto-Cubist Les Demoiselles d'Avignon, and the anti-war painting Guernica a dramatic portrayal of the bombing of Guernica by German and Italian air forces during the Spanish Civil War.
             </p>
-        <a href="https://en.wikipedia.org/wiki/Pablo_Picasso" target="_blank">Read more</a>
+        <a href="https://en.wikipedia.org/wiki/Pablo_Picasso" target="_blank">Read more (Wikipedia)</a>
         </article>
     </section>
 
     <footer>
-        <h5>Copyright ®</h5>
+        <strong>Copyright ®</strong>
     </footer>
 
-    <a href="#top" id="to-top-btn">
+    <a href="#top" id="to-top-btn" aria-label="Scroll page to the top">
         <svg viewBox="0 0 32 32">
             <g>
                 <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
