--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Look at the paintings, which are presented at the Fan Gogh Exhibition.">
     <title>Paintings - Fan Gogh Exhibition</title>
     <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -78,7 +79,7 @@
                 <li id="birth-of-venus">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/birth-of-venus.jpg" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
+                            <img src="../images/alex/birth-of-venus.webp" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
                             <figcaption>
                                 The Birth Of Venus <br>
                                 <a href="./artists.html#botticelli">Sandro Botticelli</a>
@@ -89,7 +90,7 @@
                 <li id="guernica">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/guernica.jpg" alt="Painting 'Guernica'. Pablo Picasso">
+                            <img src="../images/alex/guernica.webp" alt="Painting 'Guernica'. Pablo Picasso">
                             <figcaption>
                                 Guernica <br>
                                 <a href="./artists.html#pablo">Pablo Picasso</a>
@@ -100,7 +101,7 @@
                 <li id="last-supper">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/last-supper.jpg" alt="Painting 'The Last Supper'. Leonardo da Vinci">
+                            <img src="../images/alex/last-supper.webp" alt="Painting 'The Last Supper'. Leonardo da Vinci">
                             <figcaption>
                                 The Last Supper <br>
                                 <a href="./artists.html#davinci">Leonardo da Vinci</a>
@@ -111,7 +112,7 @@
                 <li id="mona-lisa">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/mona-lisa.jpg" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
+                            <img src="../images/alex/mona-lisa.webp" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
                             <figcaption>
                                 Mona Lisa <br>
                                 <a href="./artists.html#davinci">Leonardo da Vinci</a>
@@ -122,7 +123,7 @@
                 <li id="night-watch">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/night-watch.jpg" alt="Painting 'The Night Watch'. Rembrandt">
+                            <img src="../images/alex/night-watch.webp" alt="Painting 'The Night Watch'. Rembrandt">
                             <figcaption>
                                 The Night Watch <br>
                                 <a href="./artists.html#rembrandt">Rembrandt Harmenszoon van Rijn</a>
@@ -133,7 +134,7 @@
                 <li id="pearl-earring">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/pearl-earring.jpg"  alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
+                            <img src="../images/alex/pearl-earring.webp"  alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
                             <figcaption>
                                 The Girl With A Pearl Earring <br>
                                 <a href="./artists.html#vermeer">Johannes Vermeer</a>
@@ -144,7 +145,7 @@
                 <li id="persistence-of-memory">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/persistence-of-memory.jpg" alt="Painting 'The Persistence Of Memory'. Salvador Dali">
+                            <img src="../images/alex/persistence-of-memory.webp" alt="Painting 'The Persistence Of Memory'. Salvador Dali">
                             <figcaption>
                                 The Persistence Of Memory <br>
                                 <a href="./artists.html#dali">Salvador Dali</a>
@@ -155,7 +156,7 @@
                 <li id="scream">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/scream.jpg" alt="Painting 'The Scream'. Edvard Munch">
+                            <img src="../images/alex/scream.webp" alt="Painting 'The Scream'. Edvard Munch">
                             <figcaption>
                                 The Scream <br>
                                 <a href="./artists.html#munch">Edvard Munch</a>
@@ -166,7 +167,7 @@
                 <li id="starry-night">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/starry-night.jpg" alt="Painting 'The Starry Night'. Vincent van Gogh">
+                            <img src="../images/alex/starry-night.webp" alt="Painting 'The Starry Night'. Vincent van Gogh">
                             <figcaption>
                                 The Starry Night <br>
                                 <a href="./artists.html#gogh">Vincent van Gogh</a>
@@ -177,7 +178,7 @@
                 <li id="whistlers-mother">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/whistlers-mother.jpg" alt="Painting 'Whistler's Mother'. James McNeill Whistler">
+                            <img src="../images/alex/whistlers-mother.webp" alt="Painting 'Whistler's Mother'. James McNeill Whistler">
                             <figcaption>
                                 Whistler's Mother <br>
                                 <a href="./artists.html#whistler">James McNeill Whistler</a>
@@ -189,9 +190,9 @@
         </section>
     </main>
     <footer>
-        <h5>Copyright ®</h5>
+        <strong>Copyright ®</strong>
     </footer>
-    <a href="#top" id="to-top-btn">
+    <a href="#top" id="to-top-btn" aria-label="Scroll page to the top">
         <svg viewBox="0 0 32 32">
             <g>
                 <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
