--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Book a ticket for the Fan Gogh Exhibition today. The most famous paintings from the most talanded artists in the world.">
 	<title>Tickets - Fan Gogh Exhibition</title>
     <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +32,7 @@
 			<h1>"Fan Gogh" Tickets</h1>
 			<h2>Everyone is booking tickets today!</h2>
 			<div class="t-img-wrap">
-				<img src="../images/alex/last-supper.jpg" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
+				<img src="../images/alex/last-supper.webp" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
 			</div>
 		</div>
 	</section>
@@ -166,9 +167,9 @@
 		</div>
 	</section>
 	<footer>
-        <h5>Copyright ®</h5>
+        <strong>Copyright ®</strong>
     </footer>
-    <a href="#top" id="to-top-btn">
+    <a href="#top" id="to-top-btn" aria-label="Scroll page to the top">
         <svg viewBox="0 0 32 32">
             <g>
                 <path d="M1,16A15,15,0,1,1,16,31,15,15,0,0,1,1,16Zm2,0A13,13,0,1,0,16,3,13,13,0,0,0,3,16Z" />
