image resizes and alphabetial corder css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
           </div>
           <div lass="hero-img-area">
-            <img src="./images/othavio/main-paint/1599px-sandro-botticelli-la-nascita-di-venere-google-art-project-edited.webp" alt="The Birth Of Venus; Paint by Sandro Botticelli in the mid-1480s; The painting is on display in Florence’s Uffizi Gallery"/>
+            <img src="./images/othavio/main-paint/hero-img.webp" alt="The Birth Of Venus; Paint by Sandro Botticelli in the mid-1480s; The painting is on display in Florence's Uffizi Gallery"/>
           </div>
         </div>
       </section>
@@ -54,19 +54,19 @@
           </a>
           <ul class="second-size center-flex">
             <li>
-              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/mona-lisa.png" alt="Mona Lisa painting; Oil on poplar panel"/>
+              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/img-1.png" alt="Mona Lisa painting; Oil on poplar panel"/>
               <p>Mona Lisa</p>
             </li>
             <li>
-              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/The-Last-Supper.png" alt="The Last Supper; Tempera on gesso, pitch, and mastic"/>
+              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/img-2.png" alt="The Last Supper; Tempera on gesso, pitch, and mastic"/>
               <p>The Last Supper</p>
             </li>
             <li>
-              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/1280px-van-gogh-starry-night-google-art-project.webp" alt="The Starry Night; Oil on canvas"/>
+              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/img-3.webp" alt="The Starry Night; Oil on canvas"/>
               <p>The Starry Night</p>
             </li>
             <li>
-              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/edvard-munch-1893-the-scream-oil-tempera-and-pastel-on-cardboard-91-x-73-cm-national-gallery-of-norway.webp" alt="The Scream; Oil, tempera, pastel and crayon on cardboard"/>
+              <img class="mid-page-img" src="./images/othavio/4-most-famous-paintings/img-4.webp" alt="The Scream; Oil, tempera, pastel and crayon on cardboard"/>
               <p>The Scream</p>
             </li>
           </ul>
