changing files names

--- a/pages/artists.html
+++ b/pages/artists.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Look at the artists whose paintings are presented at the Fan Gogh Exhibition.">
-    <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
+    <link rel="icon" href="../images/main/icons/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet" />
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="container center-flex">
             <a href="../index.html">
-                <img id="logo" src="../images/othavio/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
+                <img id="logo" src="../images/main/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
@@ -36,39 +36,39 @@
 
             <ul class="container1">
                 <li>
-                    <img class="artist-pictures" src="../images/varie/davinci.jpg" alt="A picture of the artist Leonardo da Vinci">
+                    <img class="artist-pictures" src="../images/artists/davinci.jpg" alt="A picture of the artist Leonardo da Vinci">
                     <a href="#davinci">Leonardo da Vinci</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/vangogh.jpg" alt="A picture of the artist Vincent van Gogh">
+                    <img class="artist-pictures" src="../images/artists/vangogh.jpg" alt="A picture of the artist Vincent van Gogh">
                     <a href="#gogh">Vincent van Gogh</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/edward-munch.jpg" alt="A picture of the artist Edward Munch">
+                    <img class="artist-pictures" src="../images/artists/edward-munch.jpg" alt="A picture of the artist Edward Munch">
                     <a href="#munch">Edward Munch</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/johannes-vermeer.jpg" alt="A picture of the artist Johannes_Vermeer">
+                    <img class="artist-pictures" src="../images/artists/johannes-vermeer.jpg" alt="A picture of the artist Johannes_Vermeer">
                     <a href="#vermeer">Johannes Vermeer</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/Sandro-Botticelli.jpg" alt="A picture of the artist Sandro Botticelli">
+                    <img class="artist-pictures" src="../images/artists/Sandro-Botticelli.jpg" alt="A picture of the artist Sandro Botticelli">
                     <a href="#botticelli">Sandro Botticelli</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/rembrandt.jpg" alt="A picture of the artist Rembrandt">
+                    <img class="artist-pictures" src="../images/artists/rembrandt.jpg" alt="A picture of the artist Rembrandt">
                     <a href="#rembrandt">Rembrandt</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/salvador-dali.jpg" alt="A picture of the artist Salvador Dali">
+                    <img class="artist-pictures" src="../images/artists/salvador-dali.jpg" alt="A picture of the artist Salvador Dali">
                     <a href="#dali">Salvador Dali</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/james-mcnelli-whistler.jpg" alt="A picture of the artist James McNeill Whistler">
+                    <img class="artist-pictures" src="../images/artists/james-mcnelli-whistler.jpg" alt="A picture of the artist James McNeill Whistler">
                     <a href="#whistler">James McNeill Whistler</a>
                 </li>
                 <li>
-                    <img class="artist-pictures" src="../images/varie/pablo-picasso.jpg" alt="A picture of the artist Pablo Picasso">
+                    <img class="artist-pictures" src="../images/artists/pablo-picasso.jpg" alt="A picture of the artist Pablo Picasso">
                     <a href="#pablo">Pablo Picasso</a>
                 </li>
             </ul>
@@ -82,7 +82,7 @@
                 Leonardo di ser Piero da Vinci (1452 - 1519) was an Italian polymath of the High Renaissance who was
                 active as a painter, draughtsman, engineer, scientist, theorist, sculptor, and architect.
                 While his fame initially rested on his achievements as a painter, he also became known for his
-                notebooks, in which he made drawings and notes on a variety of subjects, including anatomy, astronomy,
+                notebooks, in which he made drawings and notes on a artiststy of subjects, including anatomy, astronomy,
                 botany, cartography, painting, and paleontology.
             </P>
             <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Read more (Wikipedia)</a>
@@ -172,7 +172,7 @@
             <strong>Pablo Picasso</strong>
             <p>
                 Pablo Ruiz Picasso (1881 - 1973) was a Spanish painter, sculptor, printmaker, ceramicist and theatre designer who spent most of his adult life in France.
-                One of the most influential artists of the 20th century, he is known for co-founding the Cubist movement, the invention of constructed sculpture, the co-invention of collage, and for the wide variety of styles that he helped develop and explore. 
+                One of the most influential artists of the 20th century, he is known for co-founding the Cubist movement, the invention of constructed sculpture, the co-invention of collage, and for the wide artiststy of styles that he helped develop and explore. 
                 Among his most famous works are the proto-Cubist Les Demoiselles d'Avignon, and the anti-war painting Guernica a dramatic portrayal of the bombing of Guernica by German and Italian air forces during the Spanish Civil War.
             </p>
         <a href="https://en.wikipedia.org/wiki/Pablo_Picasso" target="_blank">Read more (Wikipedia)</a>
