--- a/pages/paintings.html
+++ b/pages/paintings.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Look at the paintings, which are presented at the Fan Gogh Exhibition.">
     <title>Paintings - Fan Gogh Exhibition</title>
-    <link rel="icon" href="../images/othavio/icons/favicon-32x32.png" />
+    <link rel="icon" href="../images/main/icons/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap"  rel="stylesheet" />
@@ -17,7 +17,7 @@
     <header id="header">
         <div class="container center-flex">
             <a href="../index.html">
-                <img id="logo" src="../images/othavio/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
+                <img id="logo" src="../images/main/icons/favicon-32x32.png" alt="Brand logo that shows Vincent Van Gogh in a beautiful pixel art"/>
                 <strong>Fan Gogh</strong>
             </a>
             <ul>
@@ -79,7 +79,7 @@
                 <li id="birth-of-venus">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/birth-of-venus.webp" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
+                            <img src="../images/paintings/birth-of-venus.webp" alt="Painting 'The Birth Of Venus'. Sandro Botticelli.">
                             <figcaption>
                                 The Birth Of Venus <br>
                                 <a href="./artists.html#botticelli">Sandro Botticelli</a>
@@ -90,7 +90,7 @@
                 <li id="guernica">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/guernica.webp" alt="Painting 'Guernica'. Pablo Picasso">
+                            <img src="../images/paintings/guernica.webp" alt="Painting 'Guernica'. Pablo Picasso">
                             <figcaption>
                                 Guernica <br>
                                 <a href="./artists.html#pablo">Pablo Picasso</a>
@@ -101,7 +101,7 @@
                 <li id="last-supper">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/last-supper.webp" alt="Painting 'The Last Supper'. Leonardo da Vinci">
+                            <img src="../images/paintings/last-supper.webp" alt="Painting 'The Last Supper'. Leonardo da Vinci">
                             <figcaption>
                                 The Last Supper <br>
                                 <a href="./artists.html#davinci">Leonardo da Vinci</a>
@@ -112,7 +112,7 @@
                 <li id="mona-lisa">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/mona-lisa.webp" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
+                            <img src="../images/paintings/mona-lisa.webp" alt="Painting 'Mona Lisa'. Leonardo da Vinci">
                             <figcaption>
                                 Mona Lisa <br>
                                 <a href="./artists.html#davinci">Leonardo da Vinci</a>
@@ -123,7 +123,7 @@
                 <li id="night-watch">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/night-watch.webp" alt="Painting 'The Night Watch'. Rembrandt">
+                            <img src="../images/paintings/night-watch.webp" alt="Painting 'The Night Watch'. Rembrandt">
                             <figcaption>
                                 The Night Watch <br>
                                 <a href="./artists.html#rembrandt">Rembrandt Harmenszoon van Rijn</a>
@@ -134,7 +134,7 @@
                 <li id="pearl-earring">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/pearl-earring.webp"  alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
+                            <img src="../images/paintings/pearl-earring.webp"  alt="Painting 'The Girl With A Pearl Earring'. Johannes Vermeer">
                             <figcaption>
                                 The Girl With A Pearl Earring <br>
                                 <a href="./artists.html#vermeer">Johannes Vermeer</a>
@@ -145,7 +145,7 @@
                 <li id="persistence-of-memory">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/persistence-of-memory.webp" alt="Painting 'The Persistence Of Memory'. Salvador Dali">
+                            <img src="../images/paintings/persistence-of-memory.webp" alt="Painting 'The Persistence Of Memory'. Salvador Dali">
                             <figcaption>
                                 The Persistence Of Memory <br>
                                 <a href="./artists.html#dali">Salvador Dali</a>
@@ -156,7 +156,7 @@
                 <li id="scream">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/scream.webp" alt="Painting 'The Scream'. Edvard Munch">
+                            <img src="../images/paintings/scream.webp" alt="Painting 'The Scream'. Edvard Munch">
                             <figcaption>
                                 The Scream <br>
                                 <a href="./artists.html#munch">Edvard Munch</a>
@@ -167,7 +167,7 @@
                 <li id="starry-night">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/starry-night.webp" alt="Painting 'The Starry Night'. Vincent van Gogh">
+                            <img src="../images/paintings/starry-night.webp" alt="Painting 'The Starry Night'. Vincent van Gogh">
                             <figcaption>
                                 The Starry Night <br>
                                 <a href="./artists.html#gogh">Vincent van Gogh</a>
@@ -178,7 +178,7 @@
                 <li id="whistlers-mother">
                     <div class="container">
                         <figure>
-                            <img src="../images/alex/whistlers-mother.webp" alt="Painting 'Whistler's Mother'. James McNeill Whistler">
+                            <img src="../images/paintings/whistlers-mother.webp" alt="Painting 'Whistler's Mother'. James McNeill Whistler">
                             <figcaption>
                                 Whistler's Mother <br>
                                 <a href="./artists.html#whistler">James McNeill Whistler</a>
